# NovaForge

./: Anchor.toml  Cargo.toml  README.md  notes.txt  rust-toolchain.toml
programs/novaforge/: Cargo.toml
programs/novaforge/src/: constants.rs  errors.rs  events.rs  lib.rs  utils.rs
programs/novaforge/src/instructions/: buy_planet.rs  cancel_listing.rs  check_threat.rs  claim_resource.rs  claim_resources.rs  colonize_planet.rs  initialize_planet.rs  list_planet.rs  mod.rs  repair_planet.rs  uncolonize_planet.rs  upgrade_military.rs  upgrade_planet.rs
programs/novaforge/src/state/: listing.rs  mod.rs  planet.rs
programs/novaforge/tests/: test_initialize.rs
shared/: Cargo.toml  cargo.toml
shared/src/: constants.rs  enums.rs  formulas.rs  lib.rs
tests/: Cargo.toml  colonization.rs  helpers.rs  integration.rs  marketplace.rs  planet.rs
