[package]
name = "novaforge-tests"
version = "0.1.0"
edition = "2021"

[[test]]
name = "planet"
path = "planet.rs"

[[test]]
name = "colonization"
path = "colonization.rs"

[[test]]
name = "marketplace"
path = "marketplace.rs"

[[test]]
name = "integration"
path = "integration.rs"

[dependencies]
anchor-lang = "0.31.1"
mpl-core = { version = "0.11.2", features = ["anchor"] }

[dev-dependencies]
litesvm = "0.10.0"
solana-keypair = "3.0.1"
solana-pubkey = "4.1.0"
solana-signer = "3.0.0"
solana-clock = "3.1.1"
solana-sha256-hasher = "3.1.0"
solana-address = "2.6.1"
solana-message = "3.0.1"
solana-transaction = "3.0.2"
solana-instruction = "3.4.0"
borsh = "0.10"
novaforge = { path = "../programs/novaforge" }
shared = { path = "../shared" }